--- a/app/src/main/res/layout/history_forms.xml
+++ b/app/src/main/res/layout/history_forms.xml
@@ -30,27 +30,27 @@
             android:layout_marginStart="10dp"/>
 
         <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/Type"
-        android:text="@string/Type"
-        android:textSize="18sp"
-        android:textColor="#000"
-        android:layout_toRightOf="@id/historyPic"
-        android:layout_toEndOf="@id/historyPic"
-        android:layout_marginLeft="10dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="5dp"
-        android:layout_below="@id/Date"/>
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/CardID"
+            android:text="@string/IDForms"
+            android:textSize="18sp"
+            android:textColor="#000"
+            android:layout_toRightOf="@id/historyPic"
+            android:layout_toEndOf="@id/historyPic"
+            android:layout_marginLeft="10dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="5dp"
+            android:layout_below="@id/Date"/>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/FormsType"
+            android:id="@+id/IDFormName"
             android:textSize="18sp"
             android:textColor="#a9a9a9"
-            android:layout_toRightOf="@id/Type"
-            android:layout_toEndOf="@id/Type"
+            android:layout_toRightOf="@id/CardID"
+            android:layout_toEndOf="@id/CardID"
             android:layout_marginLeft="10dp"
             android:layout_marginStart="10dp"
             android:layout_marginTop="5dp"
@@ -67,8 +67,8 @@
             android:layout_toEndOf="@id/historyPic"
             android:layout_marginLeft="10dp"
             android:layout_marginStart="10dp"
-            android:layout_marginTop="5dp"
-            android:layout_below="@id/Type"/>
+            android:layout_marginTop="15dp"
+            android:layout_below="@id/CardID"/>
 
         <TextView
             android:layout_width="match_parent"
@@ -80,8 +80,8 @@
             android:layout_toEndOf="@id/Company"
             android:layout_marginLeft="10dp"
             android:layout_marginStart="10dp"
-            android:layout_marginTop="5dp"
-            android:layout_below="@id/Type"/>
+            android:layout_marginTop="15dp"
+            android:layout_below="@id/CardID"/>
 
         <TextView
             android:layout_width="wrap_content"
