Added method to create PDF (test)

--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -129,5 +129,20 @@
         android:layout_marginTop="5dp"
         android:textAlignment="center" />
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/topdf"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_marginStart="300dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="@dimen/fab_margin"
+        android:layout_below="@id/IDForms"
+        app:backgroundTint="@color/saveform"
+        app:fabSize="auto"
+        app:layout_constraintVertical_bias="1.0"
+        app:maxImageSize="70dp"
+        app:srcCompat="@drawable/saveform" />
+
 
 </RelativeLayout>
